fix: Mobile menu - larger logo (50px) + hide floating button overlap

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1973,7 +1973,7 @@
         }
 
         .mobile-menu-logo img {
-            height: 36px;
+            height: 50px;
             width: auto;
         }
 
